# ib

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  TASKS.md  mise.toml  pyproject.toml
skills/ib-client/: SKILL.md
src/ib_cli/: __init__.py  main.py
tests/integration/: test_smoke.py
tests/unit/: test_account_models.py  test_client_parsing.py  test_fx_models.py  test_gateway.py  test_logger.py  test_new_parsers.py  test_order_models.py  test_pnl_parsing.py  test_session_models.py  test_settings.py  test_transaction_models.py
